--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrapper">
     <div class="player">
-      <video id="video" src="./videos/lofi.mp4" width="400px" poster="./images/poster.jpg" muted></video>
+      <video id="video" src="https://media.w3.org/2010/05/sintel/trailer.mp4" width="400px" poster="./images/poster.jpg" muted></video>
       <div class="player-overlay">
         <h2 class="player-title">
           Musica para programar
